--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!-- MENU BUTTON -->
 <button id="menuButton" class="menu-btn">☰</button>
 
-<!-- SLIDE PANEL -->
+<!-- RULES PANEL -->
 <div id="menuPanel" class="menu-panel">
   <h2>How It Works</h2>
 
@@ -46,6 +46,7 @@
 
   <div class="card">
     <h2>Energy</h2>
+
     <div id="balance">0</div>
     <div>Multiplier: <span id="multiplier">1</span>x</div>
     <div>Streak Days: <span id="streak">0</span></div>
@@ -54,6 +55,7 @@
 
     <button id="resetDayBtn">Reset Today</button>
     <button id="factoryResetBtn">Factory Reset</button>
+    <button id="copyDataBtn">Copy Full Report</button>
   </div>
 
   <div class="card">
