--- a/analytics.html
+++ b/analytics.html
@@ -1,56 +1,49 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>State Tracker Analytics</title>
-<link rel="stylesheet" href="theme.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Analytics</title>
+  <link rel="stylesheet" href="theme.css">
 </head>
 
 <body>
+  <div class="app">
+    <a href="index.html" class="menu-link" style="display:inline-block; margin-bottom:12px;">← Back</a>
 
-<div class="container">
-
-  <div class="card center">
-    <h2>System Overview</h2>
-    <div id="a_balance" class="big-number">$0</div>
-    <div id="a_efficiency"></div>
-  </div>
-
-  <div class="card">
-    <h2>Time Distribution</h2>
-    <div class="bar-wrapper">
-      <div class="bar-track">
-        <div id="dominantBar" class="bar-fill productive-bar"></div>
+    <div class="dashboard" style="margin-bottom:12px;">
+      <div class="box current">
+        <div class="value">Analytics</div>
+        <div class="label">Local data summary</div>
+      </div>
+      <div class="box multiplier">
+        <div class="value" id="sessionCount">0</div>
+        <div class="label">Sessions</div>
+      </div>
+      <div class="box balance">
+        <div class="value" id="uniqueStates">0</div>
+        <div class="label">Unique items</div>
+      </div>
+      <div class="box streak">
+        <div class="value" id="trackedMins">0.0</div>
+        <div class="label">Tracked mins</div>
       </div>
     </div>
-    <div id="distributionText"></div>
+
+    <div class="box" style="text-align:left; margin-bottom:12px;">
+      <div class="label" style="margin-top:0;">Top breakdown</div>
+      <div id="topList" style="margin-top:10px; font-weight:800;"></div>
+    </div>
+
+    <div class="box" style="text-align:left;">
+      <div class="label" style="margin-top:0;">Raw storage</div>
+      <pre id="rawDump" style="margin:10px 0 0; white-space:pre-wrap; font-size:12px;"></pre>
+      <div style="display:flex; gap:10px; margin-top:12px;">
+        <button class="menu-link-btn" id="copyRawBtn" type="button">Copy Raw</button>
+        <button class="menu-link-btn" id="refreshBtn" type="button">Refresh</button>
+      </div>
+    </div>
   </div>
 
-  <div class="card">
-    <h2>Top Primary States</h2>
-    <div id="topStatesContainer"></div>
-  </div>
-
-  <div class="card">
-    <h2>Top Combos (Primary + Modifiers)</h2>
-    <div id="topCombosContainer"></div>
-  </div>
-
-  <div class="card">
-    <h2>Multiplier & Streak</h2>
-    <div id="a_multiplier"></div>
-    <div id="a_streak"></div>
-  </div>
-
-  <div class="card">
-    <button onclick="window.location.href='index.html'">Back</button>
-  </div>
-
-</div>
-
-<script src="states.js"></script>
-<script src="storage.js"></script>
-<script src="analytics.js"></script>
-
+  <script src="analytics.js"></script>
 </body>
 </html>
