--- a/analytics.html
+++ b/analytics.html
@@ -10,40 +10,24 @@
   <div class="app">
     <a href="index.html" class="menu-link" style="display:inline-block; margin-bottom:12px;">← Back</a>
 
-    <div class="dashboard" style="margin-bottom:12px;">
-      <div class="box current">
-        <div class="value">Analytics</div>
-        <div class="label">Local data summary</div>
-      </div>
-      <div class="box multiplier">
-        <div class="value" id="sessionCount">0</div>
-        <div class="label">Sessions</div>
-      </div>
-      <div class="box balance">
-        <div class="value" id="uniqueStates">0</div>
-        <div class="label">Unique items</div>
-      </div>
-      <div class="box streak">
-        <div class="value" id="trackedMins">0.0</div>
-        <div class="label">Tracked mins</div>
-      </div>
+    <div class="box current" style="margin-bottom:12px;">
+      <div class="value">Analytics</div>
+      <div class="label">Local summary</div>
     </div>
 
-    <div class="box" style="text-align:left; margin-bottom:12px;">
-      <div class="label" style="margin-top:0;">Top breakdown</div>
-      <div id="topList" style="margin-top:10px; font-weight:800;"></div>
+    <div class="box" style="margin-bottom:12px;">
+      <div class="value" id="sessionCount">0</div>
+      <div class="label">Sessions Logged</div>
     </div>
 
-    <div class="box" style="text-align:left;">
-      <div class="label" style="margin-top:0;">Raw storage</div>
-      <pre id="rawDump" style="margin:10px 0 0; white-space:pre-wrap; font-size:12px;"></pre>
-      <div style="display:flex; gap:10px; margin-top:12px;">
-        <button class="menu-link-btn" id="copyRawBtn" type="button">Copy Raw</button>
-        <button class="menu-link-btn" id="refreshBtn" type="button">Refresh</button>
-      </div>
+    <div class="box">
+      <div class="value" style="font-size:14px; font-weight:900; text-align:left;">Recent Sessions</div>
+      <pre id="recentSessions" style="margin:10px 0 0; white-space:pre-wrap; font-size:12px; color:#111;"></pre>
     </div>
   </div>
 
+  <script src="storage.js"></script>
+  <script src="engine.js"></script>
   <script src="analytics.js"></script>
 </body>
 </html>
