Add state management scripts to index.html
Added new script tags for states-location.js, states-movement.js, and states-activity.js.

--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
 
 <script src="storage.js"></script>
 <script src="engine.js"></script>
+  <script src="states-location.js"></script>
+<script src="states-movement.js"></script>
+<script src="states-activity.js"></script>
 <script src="ui.js"></script>
 <script src="app.js"></script>
 
